# flamegpu2-neuroblastoma

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Compilation_commands  LICENSE.MD  README.md
.github/scripts/: install_cuda_ubuntu.sh
.github/workflows/: Lint.yml  Ubuntu.yml  Windows.yml
analysis/: Analysis.py  Processing.py  hetNB_results.pkl
cmake/: flamegpu2.cmake
inputs/: .~lock.LHC_Cal4.csv#  LHC_Cal3.csv  LHC_Cal3b.csv  LHC_Cal4.csv  LHC_Calibrate2.csv  LHC_hetNB.csv  LHC_hetNB0a.csv  LHC_hetNB0b.csv  LHC_hetNB1.csv  LHC_hetNB2.csv  LHC_hetNB3.csv  LHC_hetNB4.csv  LHC_hetNB5.csv  calibration_file_defaults.json  in-2022-03-29.json  input-12189.json  input-29345.json  input-33153.json  out-29345.json
orchestrator_src/: json.h  json_in.cpp  json_in.cu  json_in2.cpp  json_out.cpp  main.cu  main.h  structures.h
py_src/: environment.py  header.py  main.py  venv.bat
py_src/agents/: neuroblastoma.py  schwann.py
py_src/submodels/: force_resolution.py  fr_apply_force.cu  fr_calculate_force.cu  fr_output_location.cu
scripts/: JSON.py  batch_run.py  build_on_ares.sh  build_on_athena.sh  build_on_bessemer_a100.sh  build_on_prometheus.sh  build_profile_on_bessemer_a100.sh  test_batch_in.csv  test_batch_in.xlsx  test_batch_on_ares.sh  test_batch_on_prometheus.sh  test_run_on_ares.sh  test_run_on_athena.sh  test_run_on_bessemer_a100.sh  test_run_on_prometheus.sh
src/: .environment.cu.swp  chemo_len.h  environment.cu  environment.cu.save  header.h  hostfns.cu  main.cu  main.cu.save  main2.cu  model.cu
src/agents/: .neuroblastoma.cu.swp  grid.cu  neuroblastoma.cu  schwann.cu
src/rtc/: alter.cu  apply_force_nb.cu  apply_force_sc.cu  calculate_force.cu  nb_cell_lifecycle.cu  output_location.cu  output_location_nb.cu  output_matrix_grid_cell.cu  output_oxygen_cell.cu  sc_cell_lifecycle.cu
src/submodels/: force_resolution.cu
